2006-04-14  Andreas Köhler  <andi5.py@gmx.net>

	* lib/libqof/qof/qofbackend.h:
	* lib/libqof/qof/qofsession.c:
	* src/backend/file/gnc-backend-file.[ch]:
	* src/backend/file/io-example-account.[ch]:
	* src/backend/file/io-gncxml-v1.c:
	* src/backend/file/test/test-xml2-is-file.c: Add
	  ERR_FILEIO_NO_ENCODING and test whether xml data file declares
	  encoding.

	* src/backend/file/sixtp.[ch]: Add parsing in push mode.

	* src/backend/file/io-gncxml-v2.[ch]: Add analysis of data file to
	  find ambiguous words because of missing encoding, and parsing of
	  it with string substitutions.

	* src/gnome-utils/druid-gnc-xml-import.[ch]:
	* src/gnome-utils/glade/druid-gnc-xml-import.glade: Add Code and
	  GUI for a druid that enables the user to select from different
	  encodings for each ambiguous word.

	* src/gnome-utils/gnc-file.c: Hook the druid into the file loading
	  process and reload the file if it was successful.

2006-04-14  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Transaction.c:
	* src/engine/test/test-date.c:
	* src/backend/file/test/test-dom-converters1.c:
	  Fix 64-bit compile: Use G_GUINT64_FORMAT instead of %llu or lld
	  for Timespec seconds.
	* src/app-utils/gnc-ui-util.c:
	  Fix 64-bit compile issues:
	  - Use QOF_SCANF_LLD instead of GNC_SCANF_LLD.
	  - Use QOF_SCANF_LLD and G_GINT64_FORMAT properly.
	  - replace %lld with G_GINT64_FORMAT

2006-04-13  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/gnc-ledger-display.c:
	* src/business/business-ledger/gncEntryLedgerDisplay.c:
	* src/gnome-utils/window-main-summarybar.c:
	* src/engine/Transaction.c:
	* src/engine/gnc-event.h:
	* src/gnome/window-reconcile.c: Add a new event for when a split
	associated with account is changed.

	* src/gnome-utils/account-quickfill.c: Improve the performance of
	the listen_for_accounts function.  Never rebuild the list_store
	from scratch as the time required to sort each account insertion
	takes forever with a large number of accounts.
