@@ -1,3 +1,9 @@
+2006-04-14  David Hampton  <hampton@employees.org>
+
+	* src/backend/file/io-gncxml-v2.c:
+	* src/gnome-utils/druid-gnc-xml-import.c: Fixes to compile with
+	gcc4.
+
 2006-04-14  Andreas Köhler  <andi5.py@gmx.net>
 
 	* lib/libqof/qof/qofbackend.h:
